<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtSelect1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtSelect2"
        app:layout_constraintEnd_toStartOf="@+id/txtSelect2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIconOne" />

    <TextView
        android:id="@+id/txtSelect2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/txtSelect3"
        app:layout_constraintEnd_toStartOf="@+id/txtSelect3"
        app:layout_constraintStart_toEndOf="@+id/txtSelect1"
        app:layout_constraintTop_toBottomOf="@+id/ivIconThree" />

    <TextView
        android:id="@+id/txtSelect3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSelect2"
        app:layout_constraintTop_toBottomOf="@+id/ivIconTow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/msgLayouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/msgLayoutColor"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/txtRouCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelect2">

        <TextView
            android:id="@+id/txtNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/noteColor"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="72dp"
            android:onClick="btnNo"
            android:text="@string/btn_no"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNote"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:onClick="btnYes"
            android:text="@string/btn_yes"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/btnNo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNote" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/noteColor"
        android:gravity="start|top"
        android:padding="10dp"
        android:text="Round   |   Ball   |   Select   |  Switched  |  Result     "
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRouCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:text="@string/Round_Count"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etAutoRou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShowRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="btnShowRec"
        android:text="@string/show_records"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtRec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/percentage"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnShowRec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtLost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/lost"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txtPercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtWin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/win"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txtLost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivIconOne"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/close"
        android:onClick="ivIconOne"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconThree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIconTow"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/close"
        android:onClick="ivIconTow"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconThree"
        app:layout_constraintStart_toEndOf="@+id/ivIconOne"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIconThree"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/close"
        android:onClick="ivIconThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivIconTow"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAutoRou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/et_AutoR_hint"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRun"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="btnRun"
        android:text="@string/btn_run"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etAutoRou" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="25dp"
        android:text="@string/always_select"
        android:textColor="@color/noteColor"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txtWin"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnYesRoNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:onClick="btnYesRoNo"
        android:padding="5dp"
        android:text="@string/btn_yes"
        android:textColor="@color/noteColor"
        android:textSize="16dp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toEndOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>